# simple_blog

./: .gitignore  .pdm-python  README.md  pyproject.toml
app/: settings.py  urls.py
blog/: settings.py  urls.py
post/: models.py  urls.py  views.py
post/migrations/: 0001_initial.py
products/: admin.py  models.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_brand_alter_product_category_and_more.py  0003_alter_product_warranty.py  0004_remove_product_brand_remove_product_category_and_more.py  0005_product_brand_product_category_product_seller_and_more.py  0006_bannerimage.py
static/: style.css
templates/: category_page.html  home.html  index.html  posts.html  products_page.html
templates/post/: index.html
