[tool.pdm]

[project]
name = "simple_app"
version = "0.1.0"
description = "django based simple project"
authors = [
    {name = "saydur", email = "saydur774@gmail.com"},
]
dependencies = [
    "Django>=4.2.1",
    "Pillow>=9.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python manage.py runserver"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
createsuperuser = "python manage.py createsuperuser"
startproject = "django-admin startproject {args} ."
startapp = "python manage.py startapp {args}"
shell = "python manage.py shell"